@@ -16,4 +16,5 @@ $RUNLOAD -object:markers > markers.log
 $RUNLOAD -object:strains > strains.log
 $RUNLOAD -object:proteinDomains > domains.log
 $RUNLOAD -object:ensembl > ensembl.log
+$RUNLOAD -object:variants > variants.log
 
