@@ -1,3 +1,6 @@
+Aug 11, 2023
+  jbrowse2: variants
+
 Aug 8, 2023
   agr gff3: updated header
 
